# DevOps_FinalTest

./: .coverage  .dockerignore  Dockerfile  Makefile  README.md  answers.md  coverage.xml  docker-compose.blue-green.yml  docker-compose.yml  main.py  pyproject.toml  sonar-project.properties  test-results.xml
.github/workflows/: ci-cd.yml
app/: main.py  models.py
app/routes/: health.py  items.py
nginx/: nginx.conf
nginx/conf.d/: upstream.conf
scripts/: deploy.sh  setup-runner.sh
tests/: conftest.py  test_health.py  test_items.py
